--- a/Dseda/src/Vista/ventanaNuevoProv.form
+++ b/Dseda/src/Vista/ventanaNuevoProv.form
@@ -163,6 +163,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Cancelar"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCancelarNProvActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
