--- a/Dseda/src/Vista/ventanaPrincipal.form
+++ b/Dseda/src/Vista/ventanaPrincipal.form
@@ -49,6 +49,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Cargar proveedor"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="itemMenuCargarProvActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
